--- a/web/src/main/webapp/home.html
+++ b/web/src/main/webapp/home.html
@@ -54,34 +54,29 @@ polyline{
 						人口统计学等基本属性
 						</font>
 						<br></br>
-						<label class="descriptionLabel">性别：</label> 
+						<label class="descriptionLabel">性别：</label>
 						<label id="person_gender" style="float:left">t</label> &nbsp;
-						<label class="descriptionLabel">&nbsp年龄：</label>
-						<label id="person_age" style="float:left">t</label> &nbsp;
 						<label class="descriptionLabel">&nbsp地域：</label>
 						<label id="person_region" style="float:left">t</label>
 						<br>
-						<label class="descriptionLabel">星座：</label>
-						<label id="person_constellation">t</label>
-						<label class="descriptionLabel">教育程度：</label>
-						<label id="person_education">t</label>
-						<label class="descriptionLabel">毕业学校：</label>
-						<label id="person_institution"></label>
-						<label class="descriptionLabel">所在公司：</label>
-						<label id="person_company"></label>
-						
-						<label class="descriptionLabel">职位信息：</label>
-						<label id="person_position"></label>
-						<label class="descriptionLabel">收入水平：</label>
-						<label id="person_income"></label>	
+						<label class="descriptionLabel">好友数：</label>
+						<label id="friend_count">t</label>
+						<label class="descriptionLabel">粉丝数：</label>
+						<label id="follow_count">t</label>
+						<label class="descriptionLabel">状态数：</label>
+						<label id="status_count">t</label>
+						<label class="descriptionLabel">描述：</label>
+						<label id="person_discription">t</label>
 						</br>
 					</div>
 					<div class="descriptionBox" style="left:0; top:0">
 						<font color="#ff8000">品牌社交互动属性</font>
 						<br></br>
 						<label class="descriptionLabel">品牌互动倾向：</label>
+                        <progress class="display_bar" value=5 max=10 ></progress>
 						<label id="brand_interaction">5.0</label>
 						<label class="descriptionLabel">品牌喜好：</label>
+                        <progress class="display_bar" value=6 max=10 ></progress>
 						<label id="brand_preference">+6.0</label>
 						<br>
 						<font class="descriptionLabel" color="#ff8000">品牌消费属性</font>
@@ -115,9 +110,11 @@ polyline{
 						<font color="#ff8000">社交媒体属性</font>
 						<br></br>
 						<label class="descriptionLabel">社会化影响力：</label>
-						<label id="social_influence">6.0</label>
+                        <progress class="display_bar" value=6 max=10 ></progress>
+                        <label id="social_influence">6.0</label>
 						<label class="descriptionLabel">社交活跃度：</label>
-						<label id="social_activity">7.0</label>
+                        <progress class="display_bar" value=6 max=10 ></progress>
+                        <label id="social_activity">7.0</label>
 						<label class="descriptionLabel">影响力领域：</label>
 						<label id="social_influence_area">IT 互联网</label>
 					</div>
