--- a/web/src/main/webapp/home.html
+++ b/web/src/main/webapp/home.html
@@ -12,7 +12,7 @@
 <link rel="shortcut icon" href="images/favicon.ico" />
 <link rel="icon" type="image/x-icon" href="images/favicon.ico" />
 
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script type="text/javascript" src="js/d3.v3.min.js"></script>
 
 <script type="text/javascript" src="js/jquery-1.8.0.min.js"></script>
 
