integrate the html and back_end

--- a/web/src/main/webapp/home.html
+++ b/web/src/main/webapp/home.html
@@ -54,19 +54,19 @@ polyline{
 						人口统计学等基本属性
 						</font>
 						<br></br>
-						<label class="descriptionLabel">性别：</label>
-						<label id="person_gender" style="float:left">t</label> &nbsp;
-						<label class="descriptionLabel">&nbsp地域：</label>
-						<label id="person_region" style="float:left">t</label>
+						<label class="descriptionLabel">性&nbsp&nbsp&nbsp别：&nbsp&nbsp&nbsp</label>
+						<label class="descriptionvalue" id="person_gender" style="float:left">loading...</label> &nbsp;
+						<label class="descriptionLabel">&nbsp&nbsp&nbsp地域：</label>
+						<label class="descriptionvalue" id="person_region" style="float:left">loading...</label>
 						<br>
-						<label class="descriptionLabel">好友数：</label>
-						<label id="friend_count">t</label>
-						<label class="descriptionLabel">粉丝数：</label>
-						<label id="follow_count">t</label>
-						<label class="descriptionLabel">状态数：</label>
-						<label id="status_count">t</label>
-						<label class="descriptionLabel">描述：</label>
-						<label id="person_discription">t</label>
+						<label class="descriptionLabel">好友数：&nbsp&nbsp&nbsp</label>
+						<label class="descriptionvalue" id="friend_count">loading...</label>
+						<label class="descriptionLabel">粉丝数：&nbsp&nbsp&nbsp</label>
+						<label class="descriptionvalue" id="follow_count">loading...</label>
+						<label class="descriptionLabel">状态数：&nbsp&nbsp&nbsp</label>
+						<label class="descriptionvalue" id="status_count">loading...</label>
+						<label class="descriptionLabel">描&nbsp&nbsp&nbsp述：&nbsp&nbsp&nbsp</label>
+						<label class="descriptionvalue" id="person_discription">loading...</label>
 						</br>
 					</div>
 					<div class="descriptionBox" style="left:0; top:0">
@@ -74,17 +74,17 @@ polyline{
 						<br></br>
 						<label class="descriptionLabel">品牌互动倾向：</label>
                         <progress class="display_bar" value=5 max=10 ></progress>
-						<label id="brand_interaction">5.0</label>
+						<label class="descriptionvalue" id="brand_interaction">5.0</label>
 						<label class="descriptionLabel">品牌喜好：</label>
                         <progress class="display_bar" value=6 max=10 ></progress>
-						<label id="brand_preference">+6.0</label>
+						<label class="descriptionvalue" id="brand_preference">+6.0</label>
 						<br>
 						<font class="descriptionLabel" color="#ff8000">品牌消费属性</font>
 						<br>
 						<label class="descriptionLabel">感兴趣的品牌：</label>
-						<label id="brand_interested">ZARA,H&M</label>
+						<label class="descriptionvalue" id="brand_interested">ZARA,H&M</label>
 						<label class="descriptionLabel">曾经消费的品牌：</label>
-						<label id="brand_purchased">levis牛仔裤， 28码</label>
+						<label class="descriptionvalue" id="brand_purchased">levis牛仔裤， 28码</label>
 						
 					</div>
 					<div class="descriptionBox" style="right:0; bottom:0">
@@ -92,31 +92,31 @@ polyline{
 							<font color="#ff8000">生活兴趣：</font>
 						</label>
 						<br>
-						<label id="personal_interests">旅游，网购，宅</label>
+						<label class="descriptionvalue" id="personal_interests">旅游，网购，宅</label>
 						<br>
 						<label class="descriptionLabel">
 							<font color="#ff8000">职业兴趣：</font>
 						</label>
 						<br>
-						<label id="professional_interests">社会化营销，数据挖掘，PHP</label>
+						<label class="descriptionvalue" id="professional_interests">社会化营销，数据挖掘，PHP</label>
 						<br>
 						<label class="descriptionLabel">
 							<font color="#ff8000">媒体倾向：</font>
 						</label>
 						<br>
-						<label id="media_preference">网络媒体，认证名人</label>
+						<label class="descriptionvalue" id="media_preference">网络媒体，认证名人</label>
 					</div>
 					<div class="descriptionBox" style="left:0; bottom:0">
 						<font color="#ff8000">社交媒体属性</font>
 						<br></br>
 						<label class="descriptionLabel">社会化影响力：</label>
                         <progress class="display_bar" value=6 max=10 ></progress>
-                        <label id="social_influence">6.0</label>
+                        <label class="descriptionvalue" id="social_influence">6.0</label>
 						<label class="descriptionLabel">社交活跃度：</label>
                         <progress class="display_bar" value=6 max=10 ></progress>
-                        <label id="social_activity">7.0</label>
+                        <label class="descriptionvalue" id="social_activity">7.0</label>
 						<label class="descriptionLabel">影响力领域：</label>
-						<label id="social_influence_area">IT 互联网</label>
+						<label class="descriptionvalue" id="social_influence_area">IT 互联网</label>
 					</div>
 				</div>
 			</div>
